# steno-anki-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  clippyToAnki.txt  index.js  main.cpp  mess.txt
classes/: AVLTree.cpp  AVLTree.h  AVLTree.js  DictionaryParser.cpp  DictionaryParser.h  DictionaryParser.js  FlashcardMaker.js  GPTPrompter.js
clippy_files/: clippy_2_old.org  testList.txt
data_set/: GPTStenoTrainingModel.jsonl  testList.txt
dictionaries/: user.json
examples/data_set/: example_file.txt
examples/gpt_data/: GPTStenoTrainingModel.jsonl  gpt_tuning_comparisons.csv
examples/outputs/: ankifile.csv
outputs/: ankifile.csv  clippy2-anki.csv  oldankifile.csv  pp.txt
parser/: clippy_2_parser
parsers/: clippy_2_parser.py
